update rest AirportServiceRestController.java